--- a/dev/index.html
+++ b/dev/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <div class="header-text">
-            <p>Job Hunter</p>
+            <p>Welcome!</p>
             <h1>Hi, I'm <span>Mike</span><br>Get to know me!</h1>
         </div>
     </div>
